--- a/SearchFight/packages.config
+++ b/SearchFight/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LightInject" version="5.1.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.CodeCoverage" version="16.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
